# minisky

./: .gitignore  AGENTS.md  CLAUDE.md  clearsky-api.py  clearsky-console.py  clearsky-run.py  minisky-api.py  minisky-console.py  minisky-run.py  mkdocs.yml  pyproject.toml  readme.md  settings.yml
.github/workflows/: tests.yml
clearsky/: __init__.py
clearsky/core/: __init__.py  entity.py  simtime.py  trafficarrays.py  varexplorer.py  walltime.py
clearsky/navdatabase/: loadnavdata.py  loadnavdata_txt.py  navdatabase.py
clearsky/simulation/: console.py  runner.py  simulation.py
clearsky/stack/: __init__.py  argparser.py  basecmds.py  cmdparser.py  commands.py  importer.py  recorder.py  simstack.py  stackbase.py
clearsky/tools/: __init__.py  areafilter.py  cachefile.py  geo.py  position.py
clearsky/traffic/: activewpdata.py  adsbmodel.py  aporasas.py  autopilot.py  conditional.py  metric.py  route.py  traffic.py  trafficgroups.py  trails.py  turbulence.py  windfield.py  windsim.py
clearsky/traffic/asas/: detection.py  mvp.py  resolution.py  statebased.py
clearsky/traffic/performance/: __init__.py  base.py  coeff.py  openap.py  phase.py  thrust.py
docs/: architecture.md  commands.csv  getting-started.md  index.md  known-issues.md  multicopter-plan.md  references.csv  upstream.md
docs/api/: core.md  minisky.md  plugin.md  simulation.md  stack.md  tools.md  traffic.md
docs/guides/: cli.md  console.md  plugins.md  python-api.md  rest-api.md  running-scenarios.md  tangram.md
docs/reference/: commands.md
example_plugins/: customautopilot.py  example.py  tangram.py
example_plugins/tangram_minisky/: eslint.config.js  package-lock.json  package.json  pyproject.toml  readme.md  tsconfig.json  tsconfig.vite.json  vite.config.ts
example_plugins/tangram_minisky/src/tangram_minisky/: AircraftCountWidget.vue  AircraftLayer.vue  AircraftTrailLayer.vue  SimControlWidget.vue  __init__.py  index.ts  store.ts
minisky/: __init__.py  cli.py  server.py  streaming.py
minisky/core/: __init__.py  entity.py  settings.py  simtime.py  trafficarrays.py  varexplorer.py  walltime.py
minisky/data/navigation/: airport.parquet  airway.parquet  country.parquet  fir.json  runway_thresholds.json  waypoint.parquet
minisky/navdatabase/: loadnavdata.py  loadnavdata_txt.py  navdatabase.py
minisky/plugin/: __init__.py  entity.py  plugin.py  plugin_decorators.py  timedfunction.py
minisky/simulation/: __init__.py  console.py  runner.py  simulation.py
minisky/stack/: __init__.py  argparser.py  commands.py
minisky/tools/: __init__.py  aero.py  areafilter.py  cachefile.py  convert.py  geo.py  navdata.py  position.py
minisky/tools/src_cpp/: setup.py
minisky/traffic/: __init__.py  activewpdata.py  adsbmodel.py  aporasas.py  autopilot.py  conditional.py  metric.py  route.py  traffic.py  trafficgroups.py  trails.py  turbulence.py  uncertainty.py  wind.py  windfield.py  windsim.py
minisky/traffic/asas/: __init__.py  detection.py  mvp.py  resolution.py
minisky/traffic/performance/: __init__.py  base.py  coeff.py  openap.py  perfoap.py  phase.py  thrust.py
scenario/: 2ac_converging.scn  kl204.scn
scenarios/: 2ac_converging.scn  customap.scn  kl204.scn
scripts/: gen_command_docs.py  stream_client.py
static/: aircraft_map.html  display.html
tests/: conftest.py  test_api.py
tests/integration/: test_conflict.py  test_navdata.py  test_plugin.py  test_route_autopilot.py  test_scenario.py  test_stack.py  test_streaming.py  test_tangram_bridge.py  test_traffic.py
tests/unit/: test_aero.py  test_areafilter.py  test_convert.py  test_detection.py  test_geo.py  test_phase.py  test_tangram_plugin.py
