[project]
name = "minisky"
version = "0.1.0"
description = "A minimal command line air traffic simulator with REST API (a BlueSky fork)"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.115.7",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.50",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rtree>=1.3.0",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
