[project]
name = "minisky"
version = "0.1.0"
description = "A minimal command line air traffic simulator with REST API (a BlueSky fork)"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.115.7",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openap>=2.4",
    "pandas>=2.2.3",
    "prompt-toolkit>=3.0.50",
    "pyarrow>=19.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rtree>=1.3.0",
    "scipy>=1.15.1",
]

[project.scripts]
minisky-server = "minisky.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minisky"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=9.1.1",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -m 'not api'"
markers = [
    "api: FastAPI endpoint tests, run separately: uv run pytest -m api tests/test_api.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: flake8-bugbear, SIM: flake8-simplify, C4: flake8-comprehensions
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # FastAPI relies on function calls (Depends/File) in argument defaults
    "E711",   # `== None` on numpy arrays is elementwise, not equivalent to `is None`
    "E712",   # `== True/False` on numpy arrays is elementwise and intentional
    "E721",   # `type(x) == y` comparisons are intentional in a few numeric paths
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
"minisky/plugin/*.py" = ["F401"]  # plugin API surface re-exports

[tool.pyright]
include = ["minisky", "minisky-api.py", "minisky-console.py", "minisky-run.py", "scripts"]
exclude = ["**/__pycache__", ".venv", "build", "site"]
pythonVersion = "3.11"
# "standard" catches useful bugs while staying practical for this numpy/scipy-heavy fork.
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
