[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tangram_minisky"
version = "0.1.0"
description = "tangram frontend plugin rendering live traffic from a MiniSky simulator"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["tangram_core>=0.5.0"]
classifiers = ["Private :: Do Not Upload"]
authors = [{ name = "Andres Morfin Veytia" }]

[project.entry-points."tangram_core.plugins"]
tangram_minisky = "tangram_minisky:plugin"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = ["dist-frontend/*", "src/*", "package.json"]

[tool.hatch.build.targets.wheel.force-include]
"dist-frontend" = "tangram_minisky/dist-frontend"
# not required, but allows `uvx tangram check-plugin` to work
"package.json" = "tangram_minisky/package.json"
